<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/Espectro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000033"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/espectro"
                android:textColor="#d1cdcd" />

            <Button
                android:id="@+id/btnAdquirir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adquirir" />

            <Button
                android:id="@+id/btnParar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parar" />

            <EditText
                android:id="@+id/conexao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/conexao"
                android:textColor="#d1cdcd" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtDispositivos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="Dispositivo:"
                    android:textColor="#d1cdcd"
                    />
                <Spinner
                    android:id="@+id/spinDispositivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtDispositivos"
                    android:layout_toEndOf="@+id/txtDispositivos"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnConectar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/conectar" />

            <EditText
                android:id="@+id/modo_de_operacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/modo_de_operacao"
                android:textColor="#d1cdcd" />

            <RadioGroup
                android:id="@+id/rgroupModoOperacao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioUnico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unico"
                    android:textColor="#d1cdcd"/>

                <RadioButton
                    android:id="@+id/radioContinuo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continuo"
                    android:textColor="#d1cdcd" />
            </RadioGroup>

            <EditText
                android:id="@+id/unidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/unidade"
                android:textColor="#d1cdcd" />

            <RadioGroup
                android:id="@+id/rgroupUnidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioUndCounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/counts"
                    android:textColor="#d1cdcd" />

                <RadioButton
                    android:id="@+id/radioUndMV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/mv"
                    android:textColor="#d1cdcd" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/numero_de_amostras"
                android:textColor="#d1cdcd" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/seekNumAmostras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/txtNumAmostras"
                    android:layout_toStartOf="@+id/txtNumAmostras"
                    android:max="2048"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/txtNumAmostras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:text="0000"/>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/tempo_de_integracao"
                android:textColor="#d1cdcd" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:id="@+id/seekTempoIntegra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/txtTempoIntegra"
                    android:layout_toStartOf="@+id/txtTempoIntegra"
                    android:max="2048"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"/>
                <TextView
                    android:id="@+id/txtTempoIntegra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:text="0000"/>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/faixa_expectral"
                android:textColor="#d1cdcd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:editable="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/PCA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/Conexão"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
